deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack-to-telegram
  name: slack-to-telegram
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: slack-to-telegram
  type: ClusterIP
